# capstone_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  fix_torch.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
deploy/: deploy.sh  docker-compose.yml  healthcheck.sh  power_profile.json  rollback.sh
src/dms/: config.py  healthcheck.py  live_stream.py  main.py
src/dms/modules/: alert.py  calibrator.py  camera.py  face_detector.py  head_pose.py  imu.py  pfld.py  phone.py  state_machine.py  trt_backend.py
testing_hardware/: test_actuator.py  test_alert.py  test_camera.py  test_dms_all.py  test_headpose.py  test_imu.py  test_pfld.py  test_phone.py  test_tensorrt.py  test_wiring.py
tests/: test_alert.py  test_calibrator.py  test_camera.py  test_config.py  test_face_detector.py  test_head_pose.py  test_healthcheck.py  test_imu.py  test_pfld.py  test_phone.py  test_state_machine.py
tests/integration/: test_jetson_e2e.py
